--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+asgiref==3.5.2
 cachetools==5.2.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
 cryptography==37.0.4
+Django==4.1.3
 google-api-core==2.8.2
 google-api-python-client==2.58.0
 google-auth==2.11.0
@@ -30,5 +32,7 @@ requests-oauthlib==1.3.1
 rsa==4.9
 sanitize-filename==1.2.0
 six==1.16.0
+sqlparse==0.4.3
+twilio==7.15.3
 uritemplate==4.1.1
 urllib3==1.26.12
