--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -r requirements.txt # install all our dependencies for the project
-      - run: cd GoogleSharePointMigrationAssistant
-      - run: python manage.py test
+      - run: python GoogleSharePointMigrationAssistant/manage.py test
