--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -r requirements.txt # install all our dependencies for the project
+      - run: python GoogleSharePointMigrationAssistant/manage.py makemigrations web
+      - run: python GoogleSharePointMigrationAssistant/manage.py migrate web
       - run: python GoogleSharePointMigrationAssistant/manage.py test
