--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,32 @@
-name: Testing
-on: [pull_request, push]
+name: Django - Continuous Integration
+on: on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
   testing_project:
     runs-on: ubuntu-latest # operating system your code will run on
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.8, 3.9, 3.10]
+
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - run: pip install -r requirements.txt # install all our dependencies for the project
-      - run: python GoogleSharePointMigrationAssistant/manage.py makemigrations web
-      - run: python GoogleSharePointMigrationAssistant/manage.py migrate web
-      - run: python GoogleSharePointMigrationAssistant/manage.py test
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Database Migrations
+        run: |
+          cd GoogleSharePointMigrationAssistant
+          python manage.py makemigrations web 
+          python manage.py migrate web 
+      - name: |
+          cd GoogleSharePointMigrationAssistant
+          python manage.py test
