--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,15 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.8, 3.9, 3.10]
-
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -27,6 +29,7 @@ jobs:
           cd GoogleSharePointMigrationAssistant
           python manage.py makemigrations web 
           python manage.py migrate web
-      - name: |
+      - name: Run tests
+        run: |
           cd GoogleSharePointMigrationAssistant
           python manage.py test
