--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,18 +7,14 @@ on:
 jobs:
   testing_project:
     runs-on: ubuntu-latest # operating system your code will run on
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.8, 3.9, 3.10]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
 
       - name: Install Dependencies
         run: |
