--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 asgiref==3.5.2
+async-timeout==4.0.2
+autopep8==2.0.0
 cachetools==5.2.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
 cryptography==37.0.4
+Deprecated==1.2.13
 Django==4.1.3
+django-rest-framework==0.1.0
+djangorestframework==3.14.0
 google-api-core==2.8.2
 google-api-python-client==2.58.0
 google-auth==2.11.0
@@ -17,9 +22,11 @@ lastpass-python==0.3.2
 msal==1.18.0
 oauthlib==3.2.0
 Office365-REST-Python-Client==2.3.13
+packaging==21.3
 protobuf==4.21.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.9.1
 pycparser==2.21
 pycryptodome==3.15.0
 PyJWT==2.4.0
@@ -27,12 +34,15 @@ pyparsing==3.0.9
 python-dotenv==0.20.0
 pytz==2022.2.1
 ratelimit==2.2.1
+redis==4.3.4
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
 sanitize-filename==1.2.0
 six==1.16.0
 sqlparse==0.4.3
+tomli==2.0.1
 twilio==7.15.3
 uritemplate==4.1.1
 urllib3==1.26.12
+wrapt==1.14.1
