--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+amqp==5.1.1
 asgiref==3.5.2
 async-timeout==4.0.2
 autopep8==2.0.0
+billiard==3.6.4.0
 cachetools==5.2.0
+celery==5.2.7
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 cryptography==37.0.4
 Deprecated==1.2.13
 Django==4.1.3
@@ -18,11 +25,13 @@ google-auth-oauthlib==0.5.2
 googleapis-common-protos==1.56.4
 httplib2==0.20.4
 idna==3.3
+kombu==5.2.4
 lastpass-python==0.3.2
 msal==1.18.0
 oauthlib==3.2.0
 Office365-REST-Python-Client==2.3.13
 packaging==21.3
+prompt-toolkit==3.0.33
 protobuf==4.21.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -45,4 +54,6 @@ tomli==2.0.1
 twilio==7.15.3
 uritemplate==4.1.1
 urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.5
 wrapt==1.14.1
